# dalahash

./: .clang-format  .gitignore  AGENTS.md  AMAZON_LINUX_BUILD.md  CMakeLists.txt  LICENSE  README.md  USING_AI_AGENT_SUMMARY.md  configure_dalahash_nofile.sh  deploy_dalahash_to_aws.sh  run_dalahash_aws_perf.sh
bench/: CMakeLists.txt  README.md  README_benchmark.md  memcached_protocol_bench.cpp  plot_shared_kv_multi_thread.py  redis_resp_bench.cpp  run_benchmark.sh  shared_kv_bench_common.h  shared_kv_multi_thread_bench.cpp  shared_kv_single_thread_bench.cpp
src/: cli.h  main.cpp
src/base/: assert.cpp  assert.h
src/kv/: DESIGN.md  DESIGN_V2.md  shared_kv_store.cpp  shared_kv_store.h  shared_kv_store_internal_stats.h  shared_kv_store_v2.cpp
src/memcached/: memcached_command.cpp  memcached_command.h  memcached_parse.cpp  memcached_parse.h  memcached_response.cpp  memcached_response.h
src/net/: connection.h  io.h  io_uring_backend.cpp  io_uring_backend.h  server.cpp  server.h  worker.cpp  worker.h
src/protocol/: protocol.h
src/protocol/echo/: echo_protocol.h
src/protocol/memcached/: memcached_protocol.h
src/protocol/redis/: redis_protocol.h
src/redis/: command.cpp  command.h  resp.cpp  resp.h  store.h
src/store/: store.h
systemd/: dalahash.service  dalahash.slice
tests/: CMakeLists.txt  cli_test.cpp  smoke_test.cpp
tests/base/: assert_test.cpp
tests/kv/: shared_kv_store_api_test.cpp  shared_kv_store_concurrency_test.cpp  shared_kv_store_stress_test.cpp  shared_kv_store_test.cpp  shared_kv_store_test_utils.h
tests/memcached/: memcached_command_test.cpp  memcached_parse_test.cpp
tests/net/: dst_echo_test.cpp  dst_memcached_test.cpp  dst_test.cpp  echo_integration_test.cpp  fuzz_test.cpp  io_uring_integration_test.cpp  memcached_fuzz_test.cpp  memcached_integration_test.cpp  server_test.cpp  sim_io_backend.h
tests/redis/: command_test.cpp  resp_test.cpp
